<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>dev.skidfuscator</groupId>
    <artifactId>skidfuscator-enterprise</artifactId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>

  <groupId>dev.skidfuscator.mapleir</groupId>
  <artifactId>mapleir</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>MapleIR-father</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <modules>
  	<module>org.mapleir.parent</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>             
            <id>copy-artifact</id>
            <phase>package</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>${project.groupId}</groupId>
                  <artifactId>main</artifactId>
                  <version>${project.version}</version>
                  <type>jar</type>
                  <classifier>full</classifier>
                  <overWrite>true</overWrite>
                  <destFileName>mapleir-full.jar</destFileName>
                </artifactItem>
                <artifactItem>
                  <groupId>${project.groupId}</groupId>
                  <artifactId>main</artifactId>
                  <version>${project.version}</version>
                  <type>jar</type>
                  <classifier>jar-with-dependencies</classifier>
                  <overWrite>true</overWrite>
                  <destFileName>mapleir-full-with-deps.jar</destFileName>
                </artifactItem>
              </artifactItems>
              <outputDirectory>${project.build.directory}</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>